--- a/assets/scss/theme/_events.scss
+++ b/assets/scss/theme/_events.scss
@@ -30,7 +30,8 @@
 
     //création de la boîte
     .eventsContainer {
-      padding-top: 570px;
+      height: 100vh;
+      padding-top:411px;
       margin-left: 30px;
       color: rgb(255, 255, 255);
       width: 50%;
