--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* IMPORTATION DES _SCSS*/
-@import url(c:\Users\Michoui\Desktop\Cours\FinalProject\hackhaton\assets\lib\bootstrap-5.1.3-dist\css\bootstrap.css);
+@import url(c:\Users\PRF\Downloads\OneDrive_2022-01-28\CODE SOURCE\finalhackaton-main\finalhackaton-main\assets\lib\bootstrap-5.1.3-dist\css\bootstrap.css);
 @font-face {
   font-family: Poppins;
   src: url(../../fonts/poppins/Poppins-Regular.ttf);
@@ -126,10 +126,9 @@ body {
 
 /*CUSTOMISATION FOOTER*/
 footer {
-  margin-top: 10rem;
+  margin: 10rem;
   background-color: grey;
-  height: 40vh;
-  padding-top: 50px;
+  padding: 50px;
 }
 
 footer img {
@@ -229,6 +228,15 @@ footer .bas a {
   footer .ul1 {
     list-style: none;
     padding-top: 2rem;
+  }
+  footer .ul1 .social-icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
@@ -567,6 +575,11 @@ footer .bas a {
   body {
     padding: 0rem;
   }
+  * .contactBody #contact .marg,
+  body .contactBody #contact .marg {
+    margin: 2rem 4rem;
+    padding: 4rem 1rem;
+  }
   * #joinus .join,
   body #joinus .join {
     width: 90%;
@@ -797,7 +810,8 @@ footer .bas a {
 }
 
 .eventBody .events .eventsContainer {
-  padding-top: 570px;
+  height: 100vh;
+  padding-top: 411px;
   margin-left: 30px;
   color: white;
   width: 50%;
@@ -2746,6 +2760,11 @@ section .gridPrice .gridElement .person {
   body {
     padding: 0rem;
   }
+  * .contactBody #contact .marg,
+  body .contactBody #contact .marg {
+    margin: 2rem 4rem;
+    padding: 4rem 1rem;
+  }
   * #joinus .join,
   body #joinus .join {
     width: 90%;
@@ -2817,10 +2836,9 @@ section .gridPrice .gridElement .person {
 
 /*CUSTOMISATION FOOTER*/
 footer {
-  margin-top: 10rem;
+  margin: 10rem;
   background-color: grey;
-  height: 40vh;
-  padding-top: 50px;
+  padding: 50px;
 }
 
 footer img {
@@ -2920,6 +2938,15 @@ footer .bas a {
   footer .ul1 {
     list-style: none;
     padding-top: 2rem;
+  }
+  footer .ul1 .social-icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
 }
 
@@ -3117,5 +3144,27 @@ footer .bas a {
   background: #000000;
   color: #ffffff;
   border: 1px solid #ffffff;
+}
+
+@media (max-width: 768px) {
+  .contactBody #physicCard1 .card {
+    border: 1px solid black;
+    border-radius: 10%;
+    background-color: black;
+    -o-object-fit: cover;
+    object-fit: cover;
+    width: 100%;
+  }
+}
+
+@media (max-width: 450px) {
+  .contactBody #physicCard1 .card {
+    border: 1px solid black;
+    border-radius: 10%;
+    background-color: black;
+    -o-object-fit: cover;
+    object-fit: cover;
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=style.css.map */
